make code much faster

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 
-\title{Annealed Stein variational gradient descent with local bandwidth}
+\title{Annealed Stein variational gradient descent with localized Gaussian kernel}
 
 \author{\name Zuheng(David) Xu \email zuheng.xu@stat.ubc.ca \\
        \addr Student number: 24617185\\}      
