--- a/tex/main.tex
+++ b/tex/main.tex
@@ -43,7 +43,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{sections/summary.tex}
 \input{sections/project.tex}
-% \input{sections/discussion.tex}
+\input{sections/discussion.tex}
 
 
 
