--- a/tex/sections/project.tex
+++ b/tex/sections/project.tex
@@ -3,35 +3,35 @@
 
 
 
-\captionsetup[subfigure]{labelformat=empty}
-\begin{figure}[t!]
-    \centering 
-\begin{subfigure}[b]{.48\textwidth} 
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bw1.png}}
-    \caption{(a)\label{fig:bw1}}
-\end{subfigure}
-\hfill
-\centering
-\begin{subfigure}[b]{0.48\textwidth}
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bw5.png}}
-    \caption{(b)\label{fig:bw5}}
-\end{subfigure}
-\hfill
-\centering
-\begin{subfigure}[b]{0.48\textwidth}
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bw10.png}}
-    \caption{(c)\label{fig:bw10}}
-\end{subfigure}
-\hfill
-\centering
-\begin{subfigure}[b]{0.48\textwidth}
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwmed.png}}
-    \caption{(d)\label{fig:bwmed}}
-\end{subfigure}
+% \captionsetup[subfigure]{labelformat=empty}
+% \begin{figure}[t!]
+%     \centering 
+% \begin{subfigure}[b]{.48\textwidth} 
+%     \scalebox{1}{\includegraphics[width=\textwidth]{figures/bw1.png}}
+%     \caption{(a)\label{fig:bw1}}
+% \end{subfigure}
+% \hfill
+% \centering
+% \begin{subfigure}[b]{0.48\textwidth}
+%     \scalebox{1}{\includegraphics[width=\textwidth]{figures/bw5.png}}
+%     \caption{(b)\label{fig:bw5}}
+% \end{subfigure}
+% \hfill
+% \centering
+% \begin{subfigure}[b]{0.48\textwidth}
+%     \scalebox{1}{\includegraphics[width=\textwidth]{figures/bw10.png}}
+%     \caption{(c)\label{fig:bw10}}
+% \end{subfigure}
+% \hfill
+% \centering
+% \begin{subfigure}[b]{0.48\textwidth}
+%     \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwmed.png}}
+%     \caption{(d)\label{fig:bwmed}}
+% \end{subfigure}
 
-\caption{Comparison of A-SVGD on the synthetic Gaussian mixture with 16 components across different bandwidth. }
-\label{fig:BW}
-\end{figure}
+% \caption{Comparison of A-SVGD on the synthetic Gaussian mixture with 16 components across different bandwidth. }
+% \label{fig:BW}
+% \end{figure}
 
 
 
@@ -81,13 +81,13 @@
 \begin{figure}[t!]
     \centering 
 \begin{subfigure}[b]{.48\textwidth} 
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwlocal.png}}
+    \scalebox{1}{\includegraphics[width=\textwidth]{figures/mixGauss.png}}
     \caption{(a) \label{fig:bwlocal}}
 \end{subfigure}
 \hfill
 \centering
 \begin{subfigure}[b]{0.48\textwidth}
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/slice_local.png}}
+    \scalebox{1}{\includegraphics[width=\textwidth]{figures/slice_gauss.png}}
     \caption{(b)\label{fig:slicelocal}}
 \end{subfigure}
 
@@ -100,13 +100,13 @@
 \begin{figure}[t!]
     \centering 
 \begin{subfigure}[b]{.48\textwidth} 
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/grid_local.png}}
+    \scalebox{1}{\includegraphics[width=\textwidth]{figures/grid_gs.png}}
     \caption{(a) $\{x_i^{(0)}\}_{i = 1}^{500} \distiid \distNorm(0\ind, 0.25I)$  \label{fig:bwlocal}}
 \end{subfigure}
 \hfill
 \centering
 \begin{subfigure}[b]{0.48\textwidth}
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/grid_local10.png}}
+    \scalebox{1}{\includegraphics[width=\textwidth]{figures/grid_gs10.png}}
     \caption{(b) $\{x_i^{(0)}\}_{i = 1}^{500} \distiid \distNorm(10\ind, 0.25I)$ \label{fig:slicelocal}}
 \end{subfigure}
 
@@ -133,7 +133,7 @@ In particular, the authors suggest using a cyclical annealing schedule, i.e.,
 \[
     \alpha(k)=\left(\frac{\bmod (k, K / C)}{K / C}\right)^{p},
 \]
-where $K$ is the total number of iterations, $C$ is the number of cycles, and $p > 0$ is an exponent factor that controls the speed of the transition between two phases. As demonstrated in \cref{fig:acsched}, smaller $p$ corresponds to a shorter period of the exploratory phase.  In all our experiments using A-SVGD, we set $ p = 1$ and $C = 2$.
+where $K$ is the total number of iterations, $C$ is the number of cycles, and $p > 0$ is an exponent factor that controls the speed of the transition between two phases. As demonstrated in \cref{fig:acsched}, smaller $p$ corresponds to a shorter period of the exploratory phase.  In all our experiments using A-SVGD, we set $ p = 1$ and $C = 2$. {\color{red} add a few sentence about cyclical }
 
 Now we compare the performance of A-SVGD and SVGD on a synthetic Gaussian mixture (\cref{fig:SVGD_ASVGD}). The target distribution is a 2D mixture of $16$ Gaussian component with means equally distributed on a $4 \times 4$ grid with identical covariance $0.25I$.  We consider two different initialization particles: \cref{fig:T0_rms,fig:T0_rms_anneal} are initialized with $500$ \iid samples from $\distNorm(0, 0.25I)$; \cref{fig:T10_rms,fig:T10_rms_anneal} are initialized with $500$ \iid samples from $\distNorm(10, 0.25I)$. In this example, we use RBF kernel with $h = 0.5$. Note that in both initialization schemes, A-SVGD is able to explore all the modes 
 while all the particles produced by SVGD collapse at the components close by the initialization. Comparing \cref{fig:T0_rms_anneal,fig:T10_rms_anneal}, one may notice that the performance of A-SVGD still depend on the location of the initial particles. 
