logis dataset done

--- a/tex/sections/project.tex
+++ b/tex/sections/project.tex
@@ -138,10 +138,10 @@ where $K$ is the total number of iterations, $C$ is the number of cycles, and $p
 Now we compare the performance of A-SVGD and SVGD on a synthetic Gaussian mixture (\cref{fig:SVGD_ASVGD}). The target distribution is a 2D mixture of $16$ Gaussian component with means equally distributed on a $4 \times 4$ grid with identical covariance $0.25I$.  We consider two different initialization particles: \cref{fig:T0_rms,fig:T0_rms_anneal} are initialized with $500$ \iid samples from $\distNorm(0, 0.25I)$; \cref{fig:T10_rms,fig:T10_rms_anneal} are initialized with $500$ \iid samples from $\distNorm(10, 0.25I)$. In this example, we use RBF kernel with $h = 0.5$. Note that in both initialization schemes, A-SVGD is able to explore all the modes 
 while all the particles produced by SVGD collapse at the components close by the initialization. Comparing \cref{fig:T0_rms_anneal,fig:T10_rms_anneal}, one may notice that the performance of A-SVGD still depend on the location of the initial particles. 
 
-Although the A-SVGD manages to obtain a better mixing, its performance relies heavily on a good choice of kernel bandwidth. \cref{fig:BW} present the results of A-SVGD on the same target across $4$ different kernel bandwidth: $h = 1, 5, 10$ and the median heuristic described in \cref{sec:kernelchoice}. The initial particles are $500$ \iid samples from $\distNorm(0, 0.25I)$. We find that as $h$ increases (not even a large amount), the convergence of A-SVGD gets ruined. Moreover, the median trick suggested by \citet{liu2016stein} completely fails. For quantitative characterization of the sample qualities, we compute the kernelized Stein discrepancy,which shows a decreasing sample quality as $h$ increases. The key reason is that as the annealing schedule enables the points to traverse over different modes in the exploratory phase, the particles need to quickly converge to  the high-density region around them in the converging phase. As we mentioned previously, the driving force will push the samples along the $\nabla \log p(x)$. However, the driving force is a weighted summation of $\nabla \log p(x_i), i=1, 2, \dots, n$ and weights are controlled by the kernel. Adopting a large bandwidth tends to include misleading information from the particles that converge to other modes. 
+% Although the A-SVGD manages to obtain a better mixing, its performance relies heavily on a good choice of kernel bandwidth. \cref{fig:BW} present the results of A-SVGD on the same target across $4$ different kernel bandwidth: $h = 1, 5, 10$ and the median heuristic described in \cref{sec:kernelchoice}. The initial particles are $500$ \iid samples from $\distNorm(0, 0.25I)$. We find that as $h$ increases (not even a large amount), the convergence of A-SVGD gets ruined. Moreover, the median trick suggested by \citet{liu2016stein} completely fails. For quantitative characterization of the sample qualities, we compute the kernelized Stein discrepancy,which shows a decreasing sample quality as $h$ increases. The key reason is that as the annealing schedule enables the points to traverse over different modes in the exploratory phase, the particles need to quickly converge to  the high-density region around them in the converging phase. As we mentioned previously, the driving force will push the samples along the $\nabla \log p(x)$. However, the driving force is a weighted summation of $\nabla \log p(x_i), i=1, 2, \dots, n$ and weights are controlled by the kernel. Adopting a large bandwidth tends to include misleading information from the particles that converge to other modes. 
 
 
-Even though the previous example prefers a smaller bandwidth, it does not mean that we should start with a small $h$.
+% Even though the previous example prefers a smaller bandwidth, it does not mean that we should start with a small $h$.
 In this experiment, we create a pathological yet simple example such that neither small nor large bandwidth is satisfying.  
 Considering a two-component Gaussian mixture:
 \[
@@ -157,7 +157,7 @@ This hints at an important fact that using a universal kernel bandwidth for all 
 \section{A-SVGD with adaptive localized kernel} \label{sec:bw}
 With the intuition obtained in the last section, we suggest using different bandwidth values for each particle and updates the bandwidth adaptively across the iteration.
 The goal of this section is to design an adaptive procedure that learns a proper kernel bandwidth for each particle automatically.    
-As illustrated in \cref{fig:BW} and \cref{fig:differentBW}, a careful choice of kernel bandwidth is necessary when the target distribution has multiple modes and one might consider using different bandwidth values at a different location.  Intuitively, a proper choice of the bandwidth should reflect the local geometry of   $\log p(x)$---the curvature of $\log p(x)$---which includes information of the Hessian $\nabla^2 \log p(x)$.  
+As illustrated in  \cref{fig:differentBW}, a careful choice of kernel bandwidth is necessary when the target distribution has multiple modes and one might consider using different bandwidth values at a different location.  Intuitively, a proper choice of the bandwidth should reflect the local geometry of   $\log p(x)$---the curvature of $\log p(x)$---which includes information of the Hessian $\nabla^2 \log p(x)$.  
 
 We consider the anisotropical Gaussian kernel with covariance $\Sigma$,
 \[
