--- a/tex/sections/project.tex
+++ b/tex/sections/project.tex
@@ -173,3 +173,12 @@ With other settings fixed, we apply \cref{alg:ASVGD_bw} to the previous two synt
 
 It is worth pointing out that leveraging the Hessian of $\log p(x)$ introduces additional computation complexity. Evaluating the Hessian for all particles costs $\mcO(d^2N)$, denoting a quadratic growth as $d$ increases. This makes SVGD less practical in a high dimensional setting. In that case, we might consider using Gauss-Newton approximation to the Hessian matrix or other methods that approximate the second-order derivative using first-order information.
 Also, when $n$ is large, evaluating $\nabla^2 \log p(x)$ for all the particles is impossible. But employing  stochastic estimates of the exact Hessian matrix is a reasonable approach.  
+
+
+
+
+
+
+
+
+\section{Experiment} \label{sec:expt}
