--- a/tex/sections/discussion.tex
+++ b/tex/sections/discussion.tex
@@ -4,3 +4,5 @@ some open problems: post hoc evaluation of the mixing issue.
 is there optimal annealing schedule.
 
 is there any geometric interpretation of bandwidth
+
+the computation effciency really depends on how fast computing the Hessian, maybe we can use Gauss-Newton approximation? using the outerproduct of grad
