--- a/tex/sections/project.tex
+++ b/tex/sections/project.tex
@@ -193,6 +193,24 @@ Also, when $n$ is large, evaluating $\nabla^2 \log p(x)$ for all the particles i
 
 \subsection{logistic}
 
+\captionsetup[subfigure]{labelformat=empty}
+\begin{figure}[t!]
+    \centering 
+\begin{subfigure}[b]{.48\textwidth} 
+    \scalebox{1}{\includegraphics[width=\textwidth]{figures/logis_elbo.png}}
+    \caption{(a)   \label{fig:logiselbo}}
+\end{subfigure}
+\hfill
+\centering
+\begin{subfigure}[b]{0.48\textwidth}
+    \scalebox{1}{\includegraphics[width=\textwidth]{figures/logis_ksd.png}}
+    \caption{(b)  \label{fig:logisksd}}
+\end{subfigure}
+
+\caption{.....}
+\label{fig:logistic_reg}
+\end{figure}
+
 
 
 \subsection{GMM}
